# solana-collateral-vault

./: API.md  ARCHITECTURE.md  Anchor.toml  BACKEND_SERVICE.md  DEPLOYMENT.md  README.md  SECURITY.md  SMART_CONTRACT.md  SPL_TOKEN_INTEGRATION.md  test-all-apis.sh
backend/: Cargo.toml
backend/migrations/: 001_initial_schema.sql
backend/src/: api.rs  balance_tracker.rs  cpi_manager.rs  database.rs  error.rs  lib.rs  main.rs  models.rs  transaction_builder.rs  vault_manager.rs  vault_monitor.rs  websocket.rs
programs/collateral-vault/: Cargo.toml
programs/collateral-vault/src/: lib.rs
tests/: collateral-vault.ts
