[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anchor-client = "0.32.1"
anchor-lang = "0.32.1"
spl-token = "4.0"
spl-associated-token-account = "4.0"
solana-sdk = "2.2"
solana-client = "2.2"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros", "bigdecimal"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
axum = { version = "0.7", features = ["ws", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bs58 = "0.5"
futures-util = "0.3"
bincode = "1.3"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"
